# z80pack

./: .astylerc  .editorconfig  .gitattributes  .gitignore  .gitmodules  HISTORY  LICENSE  Makefile  README.md  altair-88-dcdd.h
altairsim/: README  als8-rom.hex  apple.prn  boot  (+69 more)
picosim/: CMakeLists.txt  README  bootrom.c  config.c  config.h  disks.c  disks.h  hw_config.c  hw_config.c.old  iosim.c  memory.c  memory.h  memsim.c  memsim.h  picosim.c  sim.h  simcfg.c  simio.c  simio.h  simmem.c  simmem.h  simport.h  z80code.h
picosim/disks/: README  cpm22.dsk  cpm3-1.dsk  cpm3-2.dsk  cpm3gen.dsk  empty.dsk  fig80.dsk  fig80scr.dsk  mpm-1.dsk  mpm-2.dsk  ucsd1.dsk  ucsdgame.dsk  ucsdint.dsk
picosim/doc/: README-pico.txt
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: .gitignore  README.md  library.json
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/block_device/: CMakeLists.txt  README.md  hw_config.c  main.c
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/command_line/: CMakeLists.txt  README.md  main.cpp
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/dynamic_config/: CMakeLists.txt  main.cpp
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/simple/: CMakeLists.txt  README.md  hw_config.c  main.c
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/simple_sdio/: CMakeLists.txt  README.md  main.c
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/stdio_buffering/: CMakeLists.txt  README.md  hw_config.c
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/unix_like/: CMakeLists.txt  hw_config.c
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/usb_mass_storage/: CMakeLists.txt  README.md  hw_config.c  main.c  msc_disk.c
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/include/: FatFsSd_C.h
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/: CMakeLists.txt
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/include/: my_debug.h  my_rtc.h
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/: sd_timeouts.c
picosim/libs/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/src/: crash.c  file_stream.c  my_debug.c  my_rtc.c
picosim/libs/pico-ds3231/: .gitignore  LICENSE  README.md
picosim/libs/pico-ds3231/examples/hello_ds3231/: CMakeLists.txt  hello_ds3231.c
picosim/libs/pico-ds3231/examples/read_temperature/: CMakeLists.txt  read_temperature.c
picosim/libs/pico-ds3231/examples/set_time/: CMakeLists.txt  set_time.c
picosim/libs/pico-ds3231/lib/: CMakeLists.txt  ds3231.c
picosim/libs/pico-ds3231/lib/include/: ds3231.h
picosim/libs/stdio_msc_usb/: README.txt  msc_usb.c  stdio_msc_usb.c  stdio_msc_usb_descriptors.c
picosim/libs/stdio_msc_usb/include/: stdio_msc_usb.h  tusb_config.h
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: README.md
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/command_line/: main.cpp
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/command_line/include/: command.h
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/command_line/src/: command.cpp
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/dynamic_config/: CMakeLists.txt
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/simple/: CMakeLists.txt  hw_config.c
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/unix_like/: CMakeLists.txt
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/include/: FatFsSd.h
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/: CMakeLists.txt
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/include/: crash.h  my_debug.h  rtc.h
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/: dma_interrupts.c  portability.h  sd_card_constants.h
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SDIO/: SdioCard.h  rp2040_sdio.c  sd_card_sdio.c
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SPI/: crc.c  crc.h  my_spi.c  sd_spi.h
picosim/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/src/: my_debug.c
picosim/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/ff15/source/: ffconf.h
picosim/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: sd_card.h
picosim/no-OS-FatFS-SD-SPI-RPi-Pico/example/tests/: big_file_test.c
picosim/roms/: Makefile  bootrom.asm  bootrom.c  bootrom.lis
picosim/rp2040/: CMakeLists.txt  README  disks.c  gpio.h  picosim.c  picosim.h  sim.h  simcfg.c  simio.c  simio.h
picosim/rp2040/doc/: README-pico.txt
picosim/rp2040/ds3231/: CMakeLists.txt  ds3231.c
picosim/rp2040/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: README.md  library.json
picosim/rp2040/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/command_line/: CMakeLists.txt
picosim/rp2040/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/dynamic_config/: main.cpp
picosim/rp2040/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/examples/simple_sdio/: CMakeLists.txt  main.c
picosim/rp2040/stdio_msc_usb/: msc_usb.c  stdio_msc_usb_descriptors.c
picosim/rp2350/: CMakeLists.txt  CMakeLists.txt.arm  CMakeLists.txt.corev  CMakeLists.txt.riscv  disks.c  picosim.c  sim.h  simcfg.c  simcfg.h  simio.c
picosim/rp2350/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/: README.md
picosim/rp2350/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/: CMakeLists.txt
picosim/rp2350/stdio_msc_usb/: CMakeLists.txt  reset_interface.c  stdio_msc_usb_descriptors.c
picosim/rp2350/stdio_msc_usb/include/: stdio_msc_usb.h
picosim/src-examples/: Makefile  README  basic4k32.c  basic8k40.c  blink.asm  blink.c  blink.lis  micro80.asm  micro80.c  micro80.lis  serial.asm  serial.c  serial.lis  tb.asm  tb.c  tb.lis  test.asm  test.lis  test8080.asm  test8080.lis
picosim/srccpm2/: Makefile  bios.asm  bios.lis  boot.asm  boot.lis  putsys.c
picosim/srccpm3/: Makefile  bnkbios3.asm  boot.asm  ldrbios.asm  putsys.c
picosim/srcmpm/: Makefile  bnkxios.mac  boot.asm  ldrbios.mac  putsys.c
picosim/srcsim/: CMakeLists.txt  disks.c  disks.h  gpio.h  net_ntp.c  net_ntp.h  net_vars.c  net_vars.h  picosim.c  picosim.h  rgbled.h  sim.h  simcfg.c  simcfg.h  simio.c  simio.h  simmem.c  simmem.h  simport.h
picosim/srcucsd-iv/: bios.asm  boot.asm  putsys.c
picosim/stdio_msc_usb/: CMakeLists.txt  msc_usb.c  reset_interface.c  stdio_msc_usb.c  stdio_msc_usb_descriptors.c
picosim/stdio_msc_usb/include/: msc_usb.h  stdio_msc_usb.h  tusb_config.h
(+836 files in other folders)
